[package]
name = "proxmox-mail-forward"
version = "0.2.2"
authors = [
    "Fiona Ebner <f.ebner@proxmox.com>",
    "Lukas Wagner <l.wagner@proxmox.com>",
    "Proxmox Support Team <support@proxmox.com>",
]
edition = "2021"
license = "AGPL-3"
description = "Proxmox mail forward helper"
homepage = "https://www.proxmox.com"

exclude = [ "debian" ]

[dependencies]
anyhow = "1.0"
log = "0.4.17"
nix = "0.26"
syslog = "6.0"

proxmox-sys = "0.5.3"
proxmox-notify = {version = "0.3.1", features = ["mail-forwarder", "pve-context", "pbs-context"] }
