[package]
name = "proxmox-mail-forward"
version = "0.3.2"
authors = [
    "Fiona Ebner <f.ebner@proxmox.com>",
    "Lukas Wagner <l.wagner@proxmox.com>",
    "Proxmox Support Team <support@proxmox.com>",
]
edition = "2024"
license = "AGPL-3"
description = "Proxmox mail forward helper"
homepage = "https://www.proxmox.com"

exclude = [ "debian" ]

[dependencies]
anyhow = "1.0"
nix = "0.26"

proxmox-log = "0.2.8"
proxmox-notify = {version = "0.5.4", features = ["mail-forwarder", "pve-context", "pbs-context"] }
proxmox-sys = "0.6"
