[package]
name = "proxmox-mail-forward"
version = "0.3.3"
authors = [
    "Fiona Ebner <f.ebner@proxmox.com>",
    "Lukas Wagner <l.wagner@proxmox.com>",
    "Proxmox Support Team <support@proxmox.com>",
]
edition = "2024"
license = "AGPL-3"
description = "Proxmox mail forward helper"
homepage = "https://www.proxmox.com"

exclude = [ "debian" ]

[dependencies]
anyhow = "1.0"
nix = "0.29"

proxmox-log = "1"
proxmox-notify = {version = "1", features = ["mail-forwarder", "pve-context", "pbs-context"] }
proxmox-sys = "1"
